; ModuleID = '/home/carl/AnghaBench/systemd/src/network/extr_networkd-link.c_link_carrier_reset.c'
source_filename = "/home/carl/AnghaBench/systemd/src/network/extr_networkd-link.c_link_carrier_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"Reset carrier\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @link_carrier_reset(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @assert(i32* %5)
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @link_has_carrier(i32* %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %27

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @link_carrier_lost(i32* %11)
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %4, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %10
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %28

17:                                               ; preds = %10
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @link_carrier_gained(i32* %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* %4, align 4
  store i32 %23, i32* %2, align 4
  br label %28

24:                                               ; preds = %17
  %25 = load i32*, i32** %3, align 8
  %26 = call i32 @log_link_info(i32* %25, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %27

27:                                               ; preds = %24, %1
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %22, %15
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i64 @link_has_carrier(i32*) #1

declare dso_local i32 @link_carrier_lost(i32*) #1

declare dso_local i32 @link_carrier_gained(i32*) #1

declare dso_local i32 @log_link_info(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
